--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,14 +1,124 @@
 body{
     font-size: 19px;
-    font-family: "Bitter";
+    font-family: "";
+    height: 100%;
+   
 }
 
-a:link{
-    color: rgb(0, 0, 0);
+
+div.scorers{
+    float: left;
+    width: 40%;
+    margin: 5%;
+    
+}
+div.defence{
+    float: left;
+    width: 40%;
+    margin: 5%;
+}
+
+div.topthree{
+    float: left;
+    width: 800px;
+    margin: 20px;
+}
+
+
+}
+
+nav{
+    margin: 50px 0;
+    background color: #fff500;
+}
+
+nav ul{
+    padding:0;
+    margin: 1;
+    list-style: none;
+    position: relative;
     
 }
 
-a:visited{
-  color: rgb(255, 0, 0);
+nav ul li{
+    display: inline-block;
+    background-color: #fff500;
 }
+
+nav a {
+    display: block;
+    padding: 0 10px;
+    color: black;
+    font-size: 20px;
+    line-height: 60px;
+    text-decoration: none;
+    border: 1px solid black;
+    
+}
+
+nav a:hover{
+    background-color: aliceblue;
+}
+
+nav ul ul{
+    display: none;
+    position: absolute;
+    top: 60px;
+}
+
+nav ul li:hover > ul {
+    display: inherit;
+}
+
+nav ul ul li{
+    width: 170px;
+    float: none;
+    display: list-item;
+    position: relative;
+}
+
+nav ul ul ul li{
+    position: relative;
+    top: -60px;
+    left: 170px;
+}
+
+li> a:after{
+    content: ' +';
+}
+
+li > a:only-child:after {
+  content: '';
+}
+
+form{
+    width 170px;
+    margin: 0px auto;   
+}
+input.input{
+    padding: 8px 15px;
+    background: rgb(208, 208, 205);
+    border: 1px solid black;
+    
+}
+
+input.search{
+    position: relative;
+    padding: 8px 15px;
+    left: -7px;
+    background: #009dff;
+    border: 1px solid black;
+    color: white
+}
+
+
+
+img{
+    width: 99%;
+    height: 300px;
+}
+
+
+
+
 
